--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
   padding: 0px;
   justify-content: center;
   align-items: center;
-
+  width:1366px;　
   text-align: center;
 }
 .wrap{
@@ -300,7 +300,7 @@ html, body {
     left: 0px;
     position: relative;
     height: 768px;
-    width: 100%;
+    width: 1366px;
     position:static;
     margin:0;
     background: url(../img/jesse-gardner-0tKc9vaYUAw-unsplash.jpg) ;
@@ -308,8 +308,8 @@ html, body {
     background-size: cover;
 }
 
-.header-right{
- 
+/* .header-right{
+    width: 100%;
     height: 768px;
     padding: .8em 1.6em .4em .8em;
     display: inline-block;
@@ -329,12 +329,12 @@ html, body {
     transform-origin: bottom right;
     position: absolute;
 	border-radius: 8px 8px 0 0;
-} 
+}  */
 
 
 .header-top h1{
     top: 450px;
-    position: absolute;
+    position: relative;
     left: 1128px;
     width: 148px;
     height: 32px;
@@ -496,7 +496,7 @@ html, body {
 .service_section{
     top: 1719px;
     left: 0px;
-    width: 100%;
+    width: 1366px;
     height: 1200px;
     background: url(../img/janko-ferlic-y0fjfgD2bLg-unsplash.jpg)  #001762 0% 0% no-repeat padding-box;
     background-position:bottom;  
@@ -1668,7 +1668,7 @@ html, body {
  .footer-contact-form{
      top: 4425px;
      left: 0px;
-     width: 100%;
+     width: 1366px;
      overflow:hidden;    
      margin: 0px;
      height: 502px;
@@ -1684,7 +1684,7 @@ html, body {
      content: "";
      left: 0px;
      left: 0px;
-     width: 100%;
+     width: 1366px;
      opacity: 0.6;
      height: 502px;
      background: #001762 0% 0% no-repeat padding-box;
@@ -2248,7 +2248,7 @@ html, body {
     
     .footer-contact-form{
         top: 6150px;
-        width:100%;
+        width: 1366px;
         height: 248px;
     }
     
@@ -2262,7 +2262,7 @@ html, body {
     
     .copyright{
         top:6398px;
-        width:100%;
+        width: 1366px;
         height: 187px;
     }
     
