--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ html, body {
     background-size: cover;
 }
 
-/* .header-right{
+.header-right{
     width: 100%;
     height: 768px;
     padding: .8em 1.6em .4em .8em;
@@ -317,19 +317,19 @@ html, body {
     opacity: 0.8; 
     position: absolute;
 }
- .header-right::before{
+.header-right::before{
     content: "";
     left: 364px;
     top: 0;
     width: 100%;
     height: 768px;
-	z-index: -1;
-	background:#001762 ;
-    transform: scaleY(6.0) perspective(.6em) rotateX(1.7deg) scaleX(1.3);
+    z-index: -1;
+    background:#001762 ;
+    transform: scaleY(4.2) perspective(.6em) rotateX(1.3deg) scaleX(1.0);
     transform-origin: bottom right;
     position: absolute;
-	border-radius: 8px 8px 0 0;
-}  */
+    border-radius: 8px 8px 0 0;
+} 
 
 
 .header-top h1{
