--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ html, body {
     overflow: hidden;
     margin: 0;
     width:100%;
-    height:6585px;
+    height:6285px;
     position: relative;
 }
 
@@ -333,7 +333,7 @@ html, body {
 
 .header-top h1{
     top: 450px;
-
+    position: relative;
     left: 1128px;
     width: 148px;
     height: 32px;
@@ -356,6 +356,7 @@ html, body {
     text-align: left;
     font: normal normal medium 88px/116px Roboto;
     letter-spacing: 0px;
+    position: relative;
     color: #FFFFFF;
     opacity: 1;
 }
@@ -364,6 +365,7 @@ html, body {
     top: 630px;
     left: 998px;
     width: 275px;
+    position: absolute;
     height: 63px;
     border: 1px solid var(--unnamed-color-ffffff);
     border: 1px solid #FFFFFF;
@@ -1133,6 +1135,7 @@ html, body {
     height: 504px;
     background: #001762 0% 0% no-repeat padding-box;
     opacity: 1;
+    position: absolute;
 }
 
 .skill-frontend h1{
@@ -1777,6 +1780,8 @@ html, body {
     .wrap{
         overflow: hidden;
         margin: 0;
+        position: relative;
+        height:6585px;
     }
 
     
@@ -1844,6 +1849,7 @@ html, body {
         top:747px;
         font: normal normal bold 40px/74px Roboto;
         left: 95px;
+        position: absolute;
         right:107px;
     }
     .about-me-under-bar{
@@ -1875,6 +1881,7 @@ html, body {
         color: var(--unnamed-color-151515);
         text-align: left;
         font-size:13px;
+        position: absolute;
         letter-spacing: 0px;
         color: #151515;
         opacity: 1;
@@ -2257,17 +2264,19 @@ html, body {
     .copyright{
         top:6398px;
         height: 187px;
+        position: absolute;
     }
     
     
-    .SNS-icon p1 img{
+    .SNS-icon p1 {
         left:104px;
         top:64px;
+        
         width: 35px;
         height: 40px;
     }
     
-    .SNS-icon p2 img{
+    .SNS-icon p2 {
         top:64px;
         left:170px;
         width: 35px;
@@ -2276,7 +2285,7 @@ html, body {
     }
     
     
-    .SNS-icon p3 img{
+    .SNS-icon p3 {
         left:236px;
         top:64px;
         width: 35px;
