--- a/css/style.css
+++ b/css/style.css
@@ -2358,6 +2358,32 @@ html, body {
         background-color: transparent;
     color:#FFFFFF;
 }
+.header-right{
+    width: 100%;
+    height: 768px;
+    padding: .8em 1.6em .4em .8em;
+    display: inline-block;
+    background: transparent 0% 0% no-repeat padding-box;
+    opacity: 0.8; 
+    position: absolute;
+} 
+ .header-right::before{
+    content: "";
+    left: 364px;
+    top: 0;
+    width: 100%;
+    height: 768px;
+    z-index: -1;
+    background:#001762 ;
+    transform: scaleY(5.0) perspective(.6em) rotateX(1.5deg) scaleX(1.2);
+    transform-origin: bottom right;
+    position: absolute;
+    border-radius: 8px 8px 0 0;
+}  
+
+
+
+
 
 
 /*プロフィール部分*/
