--- a/css/style.css
+++ b/css/style.css
@@ -372,6 +372,55 @@ html, body {
 
 
 
+/* トップページへ戻るボタン */
+#page_top{
+    width: 90px;
+    height: 60px;
+    position: fixed;
+    right: 10px;
+    bottom: 0;
+    opacity: 0.6;
+    border: 3px solid #00FF00;
+    border-radius: 15px;
+    z-index: 2;
+  }
+  #page_top a{
+    position: relative;
+    display: block;
+    width: 90px;
+    height: 60px;
+    text-decoration: none;
+  }
+  #page_top a::before{
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    content: '\f062';
+    font-size: 25px;
+    color:#00FF00;
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    top: -25px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    text-align: center;
+  }
+  #page_top a::after{
+    content: 'PAGE TOP';
+    font-size: 13px;
+    color:#00FF00;
+    position: absolute;
+    top: 38px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    text-align: center;
+  }
+
+
 /* Profile Section */
 
 /*profile part*/
