--- a/css/style.css
+++ b/css/style.css
@@ -2066,7 +2066,10 @@ html, body {
         width: 302px;
         height: 216px;
         font-size:16px;
-    
+    }
+    .service-price2 p1{
+        white-space: nowrap;
+
     }
     .service-detailed2{
         top:1179px;
