--- a/css/style.css
+++ b/css/style.css
@@ -1522,7 +1522,7 @@ html, body {
      left: 115px;
      width: 358px;
      height: 281px;
-     background: transparent url('../img/todoapp.jpg') 0% 0% no-repeat padding-box;
+     background: transparent url('../img/my.introduction.jpg') 0% 0% no-repeat padding-box;
      border: 1px solid #B5B5B5;
      opacity: 1;
      position: absolute;
@@ -1920,6 +1920,9 @@ html, body {
     position: relative;
 
 }
+#page_top{
+    display: none;
+}
     
     /*プロフィール部分*/
     
@@ -2298,7 +2301,7 @@ html, body {
         left: 46px;
         width: 283px;
         height: 222px;
-        background: transparent url('../img/todoapp.jpg') 0% 0% no-repeat padding-box;
+        background: transparent url('../img/my.introduction.jpg') 0% 0% no-repeat padding-box;
         border: 1px solid #B5B5B5;
         opacity: 1;
         position: absolute;
@@ -2472,6 +2475,10 @@ html, body {
     opacity: 0.8; 
     position: absolute;
 } 
+.header-right h2{
+   top:460px;
+}
+
  .header-right::before{
     content: "";
     left: 364px;
@@ -2734,6 +2741,15 @@ html, body {
     left: 200px;
     top:5000px;
 }
+.work_section_title h1{
+    left: 300px;
+}
+.Work-under-bar{
+    left:300px;
+}
+
+
+
 .Work2{
     left: 200px;
     top:5400px;
