--- a/css/style.css
+++ b/css/style.css
@@ -1596,7 +1596,7 @@ html, body {
      left: 505px;
      width: 358px;
      height: 281px;
-     background: transparent url('../img/todoapp.jpg') 0% 0% no-repeat padding-box;
+     background: transparent url('../img/yamagata.png') 0% 0% no-repeat padding-box;
      border: 1px solid #B5B5B5;
      opacity: 1;
      position: absolute;
